@@ -6,6 +6,7 @@ UTIL:
 * type=application | introduce actions=delete and actions=delete-force
 * type=html-merger | adjust helping information
 * type=playbook | support reading argument projectfolder from JSON playbook file
+* type=zone | actions=exporttoexcel - extend information with ZoneProtectionProfile
 
 BUGFIX:
 
